@@ -45,6 +45,7 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     when running them from dpkg. Closes: #610940
   * Use “unselected” as an adjective in dpkg output messages instead of
     “deselected”. Closes: #231089
+  * Clarify exit status in dpkg-split and start-stop-daemon --help output.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
